<resources>
    <string name="app_name">Outdoorsy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image_desc">Profile image description</string>
    <string name="sample_bio">This is a sample biography text for the user profile, describing the users background, interests, or other relevant information.</string>
    <string name="likes_label">%d Likes</string>
    <string name="comments_label">%d Comments</string>
    <string name="search_hint">Search here...</string>
    <string name="edit_post">Edit Post</string>
    <string name="enter_post_content">Enter post content</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_post">DELETE POST</string>
    <string name="choose_image">Choose image from gallery</string>
    <string name="edit_profile_image">edit profile image</string>
    <string name="edit_profile_name">edit profile name</string>
    <string name="edit_profile_button">Edit</string>
    <string name="weather">Weather</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="camera">Camera</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="captured_photo">Captured Photo</string>
    <string name="add_a_description">Add a description...</string>
    <string name="upload_post">Upload Post</string>
    <string name="save_changes">Save Changes</string>
    <string name="choose_image2">Choose Image</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="log_in">Log In</string>
    <string name="delete">Delete</string>
    <string name="post_image">Post Image</string>
    <string name="like_button">Like Button</string>
    <string name="show_comments">Show Comments</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="post_comment">Post Comment</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="sign_up">Sign Up</string>
    <string name="follow">Follow</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="refresh_weather">Refresh Weather</string>
    <string name="user_name">User Name</string>
    <string name="this_is_a_comment_content">This is a comment content</string>
    <string name="timestamp">Timestamp</string>
</resources>