<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Capture Photo Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/take_picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_photo"
        app:icon="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Image Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imageCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/take_picture_button">

        <!-- ImageView to show the captured image -->
        <ImageView
            android:id="@+id/imageViewCaptured"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/captured_photo"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_placeholder_image" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Description Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_a_description" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Upload Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_post"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_open_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_gallery"
        app:iconTint="@color/black"
     android:backgroundTint="@color/white"
      app:layout_constraintTop_toBottomOf="@id/upload_button"
      app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>


