<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.outdoorsy.viewmodel.EditPostViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.Material3.Dark">

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp">

                        <ImageView
                            android:id="@+id/imageViewPost"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            app:imageUrl="@{viewModel.imageUrl}"
                            tools:src="@tools:sample/backgrounds/scenic" />

                        <ImageButton
                            android:id="@+id/buttonChooseImage"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_margin="8dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/choose_image"
                            android:src="@android:drawable/ic_menu_gallery" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPostContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_post_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="250"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPostContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minHeight="120dp"
                        android:text="@={viewModel.postText}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    style="@style/Widget.Material3.Button.ElevatedButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonDeletePost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.deletePost()}"
                    android:text="@string/delete_post"
                    style="@style/Widget.Material3.Button.ElevatedButton" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
